<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="50dip"
    android:stretchColumns="1" >

    <TableRow android:layout_marginBottom="10dip" >

        <TextView
            android:id="@+id/sl_label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dip"
            android:text="@string/label_username" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:ems="25"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow android:layout_marginBottom="20dip" >

        <TextView
            android:id="@+id/sl_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:ems="25"
            android:inputType="textPassword" />
    </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:gravity="center" >

            <Button
                android:id="@+id/sl_button_login"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:text="@string/label_login" />

            <Button
                android:id="@+id/sl_button_exit"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:text="@string/label_exit" />
        </LinearLayout>


</TableLayout>