<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dip"
    android:weightSum="0" >

    <TextView
        android:id="@+id/label_estiva_title"
        style="@style/style_label_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:text="@string/label_op_estiva"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip" >

        <TextView
            android:id="@+id/f_est_label_client"
            style="@style/style_label_text_size"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/label_basket"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/f_est_textbox_basket"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:ems="25"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip" >

        <TextView
            android:id="@+id/f_est_label_box"
            style="@style/style_label_text_size"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/label_box"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/f_est_textbox_box"
            android:layout_width="250dip"
            android:layout_height="wrap_content"
            android:ems="25"
            android:inputType="number" >

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/f_est_button_confirm"
            style="@style/style_button_text_size"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/label_confirm"
            android:textSize="20sp" />

        <Button
            android:id="@+id/f_est_button_back"
            style="@style/style_button_text_size"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/label_back"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>